<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/home_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextAppearance="@style/tab_text"
        app:tabTextColor="@color/tab_unselected_text"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabGravity="center"
        app:tabMode="scrollable"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabIndicatorHeight="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tab_menu_1" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tab_menu_2" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tab_menu_3" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tab_menu_4" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tab_menu_5" />
    </com.google.android.material.tabs.TabLayout>
    <View
        android:id="@+id/home_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/tap_menu_gradation"
        app:layout_constraintTop_toBottomOf="@id/home_tab"
        app:layout_constraintBottom_toTopOf="@id/home_viewpager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/home_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/home_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
</androidx.constraintlayout.widget.ConstraintLayout>