<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.product.ProductActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/product_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#fff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:text="상품명"
            android:textAppearance="@style/MainFontM"
            android:textColor="@color/main_text"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detail_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextAppearance="@style/tab_text_small"
        app:tabTextColor="@color/tab_unselected_text"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabGravity="center"
        app:tabMode="scrollable"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabIndicatorHeight="3dp"
        app:layout_constraintTop_toBottomOf="@id/product_toolbar"
        app:layout_constraintBottom_toTopOf="@id/detail_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="#fff">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tab_menu_1" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tab_menu_2" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tab_menu_3" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tab_menu_4" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_Item5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tab_menu_5" />
    </com.google.android.material.tabs.TabLayout>
    <View
        android:id="@+id/detail_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/linear_line"
        app:layout_constraintTop_toBottomOf="@id/detail_tab"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/detail_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/detail_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/product_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/btn_purple"
        android:stateListAnimator="@null"
        android:text="구매하기"
        android:textAppearance="@style/MainFontM"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>